# fumemory

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
docs/: API.md  MULTI_MACHINE.md
memu/: __init__.py  api.py  cli.sh  client.py  decay.py  models.py  schema.sql
templates/: HEARTBEAT.md  MEMORY.md
templates/memory/: daily-template.md
